# coding_agent_settings_backup

./: Cargo.toml  PLAN.md  README.md  install.ps1  install.sh
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  release.yml
.omo/run-continuation/: ses_19b17563affeXQi9h5b16gRqPQ.json
scripts/: check_features.sh  generate_mock_agents.sh  install.ps1  install.sh  release.sh
src/: agent.rs  backup.rs  cli.rs  commands.rs  completion.rs  config.rs  diff.rs  discover.rs  doctor.rs  error.rs  export.rs  filter.rs  git.rs  history.rs  hooks.rs  lib.rs  main.rs  output.rs  restore.rs  schedule.rs  stats.rs  sync.rs  tag.rs  toon.rs  util.rs  verify.rs
tests/: e2e.rs
