[package]
name = "coding_agent_settings_backup"
version = "0.1.6"
edition = "2021"
description = "Backup and restore AI coding agent configuration folders with git versioning"
license = "MIT"
authors = ["quangdang"]
repository = "https://github.com/quangdang46/coding_agent_settings_backup"

[[bin]]
name = "casb"
path = "src/main.rs"

[lib]
name = "casb"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
ignore = "0.4"
tar = "0.4"
flate2 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
thiserror = "1"
rayon = "1"
glob = "0.3"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
